# atlas-marco-economics-tracker

./: .gitignore  package.json  run_frontend_local.bat  vite.config.js
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_backend_local.bat
backend/app/: config.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: briefing.py  health.py  historical.py  market.py  memory.py  metadata.py  risk.py  scenario.py  themes.py  world_pulse.py
backend/app/data/: alpha_vantage_client.py  db.py  fred_client.py  market_symbols.py  repository.py  seed.py  stooq_client.py  twelvedata_client.py  yahoo_client.py
backend/app/data/curated/: asset_sensitivity.json  countries_top50.json  explanation_templates.json  historical_regimes.json  region_factor_weights.json  regions.json  risk_weights.json  scenario_catalog.json  theme_seed_articles.json  theme_taxonomy.json  (+1 more)
backend/app/engines/: analogue_engine.py  briefing_engine.py  confidence_engine.py  decay.py  explainer.py  graph_propagation.py  risk_engine.py  scenario_engine.py  signal_model_engine.py  theme_engine.py  world_pulse_engine.py
backend/app/schemas/: briefing.py  common.py  historical.py  market.py  risk.py  scenario.py  themes.py  world_pulse.py
backend/scripts/: smoke-test.ps1
backend/supabase/: schema.sql
backend/tests/: conftest.py  test_analogue_engine.py  test_api_contracts.py  test_decay.py  test_graph_propagation.py  test_risk_engine.py  test_scenario_engine.py  test_theme_engine.py  test_world_pulse_engine.py
src/: App.jsx  (+4 more)
(+31 files in other folders)
