[project]
name = "atlas-backend"
version = "0.1.0"
description = "Backend for Atlas Macro Scenario Intelligence Engine"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "networkx>=3.3,<4.0",
  "numpy>=2.1.0,<3.0",
  "pandas>=2.2.0,<3.0",
  "supabase>=2.8.0,<3.0",
  "python-jose[cryptography]>=3.3.0,<4.0",
  "httpx>=0.27.0,<1.0",
  "websockets>=14.0,<16.0",
  "scikit-learn>=1.5.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0",
  "pytest-asyncio>=0.24.0,<1.0",
  "ruff>=0.6.0,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
